Deployed  with MkDocs version: 1.0.4

--- a/academic/index.html
+++ b/academic/index.html
@@ -88,11 +88,10 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#academic">Academic</a></li>
-            <li><a href="#home-wireless-sdr-academic">[HOME]   [Wireless]   [SDR]   [Academic]</a></li>
             <li><a href="#objective">Objective</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#papers-stochastic-geometric">Papers - Stochastic Geometric</a></li>
-            <li><a href="#papers">Papers</a></li>
+            <li><a href="#papers-general">Papers - General</a></li>
             <li><a href="#papers-robotic-wireless-network">Papers - Robotic Wireless Network</a></li>
             <li><a href="#links">Links</a></li>
             <li><a href="#idea-topics">Idea Topics</a></li>
@@ -102,8 +101,6 @@
                 <div class="col-md-9" role="main">
 
 <h1 id="academic">Academic</h1>
-<hr />
-<h3 id="home-wireless-sdr-academic"><font color='Blue'>[HOME]   [Wireless]   [SDR]   [Academic]</font></h3>
 <hr />
 <!---
 *****************************************
@@ -179,11 +176,11 @@
 <hr />
 <!---
 *****************************************
-    Papers - Stochastic Geometric 
+    Papers - General
 *****************************************
 --->
 
-<h2 id="papers">Papers</h2>
+<h2 id="papers-general">Papers - General</h2>
 <ul>
 <li>
 <p><strong>[On-Going] Modeling and Analysis of Cellular Networks Using Stochastic Geometry: A Tutorial</strong></p>
@@ -205,6 +202,18 @@
 </li>
 <li>
 <p><strong>FR2 over 52GHz</strong>    </p>
+</li>
+<li>
+<p><strong>Large Scale LoRa Network</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/2008.07438.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Age of Information</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/2008.07717.pdf</li>
+</ul>
 </li>
 </ul>
 <hr />
