--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="container">
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="main active"><a href="#saturn-an-rings">Saturn an Rings</a></li>
+        <li class="main active"><a href="#saturn-and-rings">Saturn and Rings</a></li>
             <li><a href="#work">Work</a></li>
             <li><a href="#interests">Interests</a></li>
             <li><a href="#patents">Patents</a></li>
@@ -96,7 +96,7 @@
 </div></div>
                 <div class="col-md-9" role="main">
 
-<h1 id="saturn-an-rings">Saturn an Rings</h1>
+<h1 id="saturn-and-rings">Saturn and Rings</h1>
 <p><strong>Quote from Wiki:</strong></p>
 <blockquote>
 <p>The rings of Saturn are the most extensive ring system of any planet in the Solar System. They consist of countless small particles, ranging in size from micrometers to meters, that orbit about Saturn. </p>
@@ -217,5 +217,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2020-08-20 21:20:41
+Build Date UTC : 2020-08-22 06:04:07
 -->
