Deployed  with MkDocs version: 1.0.4

--- a/academic/index.html
+++ b/academic/index.html
@@ -96,6 +96,7 @@
             <li><a href="#links">Links</a></li>
             <li><a href="#idea-topics">Idea Topics</a></li>
             <li><a href="#maths-non-convex-optimization">Maths - Non-Convex Optimization</a></li>
+            <li><a href="#maths-beautiful-proof-examples">Maths - Beautiful Proof Examples</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
@@ -340,6 +341,30 @@
 <ul>
 <li>https://arxiv.org/pdf/2007.06753.pdf</li>
 <li>phase, or dictionary transform</li>
+</ul>
+</li>
+</ul>
+<!---
+*****************************************
+    Maths - Beautiful Proof Examples
+*****************************************
+--->
+
+<h2 id="maths-beautiful-proof-examples">Maths - Beautiful Proof Examples</h2>
+<ul>
+<li>
+<p><strong>Online Trajectory Optimization Using Inexact Gradient Feedback for Time-Varying Environments</strong></p>
+</li>
+<li>
+<p><strong>Harvard Math Theorems</strong></p>
+<ul>
+<li>http://people.math.harvard.edu/~knill/graphgeometry/papers/fundamental.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Theorem in Stats</strong></p>
+<ul>
+<li>https://en.wikipedia.org/wiki/Category:Theorems_in_statistics</li>
 </ul>
 </li>
 </ul></div>
