Deployed  with MkDocs version: 1.0.4

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <li><a href="#interests">Interests</a></li>
             <li><a href="#patents">Patents</a></li>
             <li><a href="#links">Links</a></li>
+            <li><a href="#current-readings">Current Readings</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
@@ -117,8 +118,15 @@
 <hr />
 <h2 id="patents">Patents</h2>
 <ol>
-<li>[Granted] Gain control for intra-band carrier aggregation</li>
-<li>[Granted] Soft-windowing channel estimation</li>
+<li>
+<p><strong>[Granted]</strong> US9338668B2: Gain control for intra-band carrier aggregation</p>
+<ul>
+<li>Mariam Motamed, Wesley A. Sampson, Alexei Yurievitch Gorokhov, <strong>Pengkai Zhao</strong> </li>
+</ul>
+</li>
+<li>
+<p>[Granted] Soft-windowing channel estimation</p>
+</li>
 <li>[Granted] Intelligent resource assignment to increase throughput in multiple input multiple output (MIMO) and carrier aggregation (CA) capable devices</li>
 <li>[Granted] Correlation-enhanced frequency scanning</li>
 <li>Dynamically updating filtering configuration in modem baseband processing</li>
@@ -134,7 +142,42 @@
 <li>Techniques and apparatuses for interference mitigation using a reconfigurable receiver</li>
 </ol>
 <hr />
-<h2 id="links">Links</h2></div>
+<h2 id="links">Links</h2>
+<hr />
+<!-------------------------------
+    Reading Progress
+---------------------------------->
+
+<h2 id="current-readings">Current Readings</h2>
+<ul>
+<li>
+<p><strong>LTE/NR Spec</strong></p>
+<ul>
+<li>38.101-4: page 40</li>
+</ul>
+</li>
+<li>
+<p><strong>3GPP Doc</strong></p>
+<ul>
+<li>SRS R17 is done</li>
+<li>RAN1 is roughly/quickly reviewed</li>
+<li>RAN2 is on-going</li>
+<li>Multicast?</li>
+</ul>
+</li>
+<li>
+<p><strong>Papers</strong></p>
+<ul>
+<li>15 paper logs</li>
+</ul>
+</li>
+<li>
+<p><strong>Optimization Method in Chinese</strong></p>
+</li>
+<li>
+<p><strong>MIT optimization book</strong></p>
+</li>
+</ul></div>
         </div>
 
         <footer class="col-md-12">
@@ -217,5 +260,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2020-08-22 06:07:33
+Build Date UTC : 2020-08-30 04:36:00
 -->
