--- a/academic/index.html
+++ b/academic/index.html
@@ -88,8 +88,7 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#academic">Academic</a></li>
-            <li><a href="#objective">Objective</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#interesting-projects">Interesting Projects</a></li>
             <li><a href="#papers-stochastic-geometric">Papers - Stochastic Geometric</a></li>
             <li><a href="#papers-general">Papers - General</a></li>
             <li><a href="#papers-robotic-wireless-network">Papers - Robotic Wireless Network</a></li>
@@ -97,6 +96,7 @@
             <li><a href="#idea-topics">Idea Topics</a></li>
             <li><a href="#maths-non-convex-optimization">Maths - Non-Convex Optimization</a></li>
             <li><a href="#maths-beautiful-proof-examples">Maths - Beautiful Proof Examples</a></li>
+            <li><a href="#paper-reading-notes">Paper Reading Notes</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
@@ -105,24 +105,11 @@
 <hr />
 <!---
 *****************************************
-    Objective Section 
-*****************************************
---->
-
-<h2 id="objective">Objective</h2>
-<ul>
-<li>Study projects</li>
-<li>Study papers</li>
-<li>Collect equations</li>
-</ul>
-<hr />
-<!---
-*****************************************
     Project Section 
 *****************************************
 --->
 
-<h2 id="projects">Projects</h2>
+<h2 id="interesting-projects">Interesting Projects</h2>
 <ul>
 <li>
 <p><strong>Python script for basic poisson network</strong></p>
@@ -145,7 +132,7 @@
 --->
 
 <h2 id="papers-stochastic-geometric">Papers - Stochastic Geometric</h2>
-<ul>
+<ol>
 <li>
 <p><font color='red'><strong>Millimeter Wave Outdoor Cellular Networks: Stochastic Geometry Channel Modeling and Performance Analysis</strong></font></p>
 <ul>
@@ -173,7 +160,13 @@
 <li>
 <p><strong>[TO Read] The impact of mobility model on handover rate in heterogeneous multi-tier wireless networks</strong></p>
 </li>
+<li>
+<p><strong>[TO Read] Recent progress in Sto-Geo in cellular</strong></p>
+<ul>
+<li>https://chiranjibsaha.github.io/files/Saha_C_D_2020.pdf</li>
 </ul>
+</li>
+</ol>
 <hr />
 <!---
 *****************************************
@@ -304,12 +297,30 @@
 --->
 
 <h2 id="idea-topics">Idea Topics</h2>
+<p><font color='green'></p>
+<ul>
+<li>Multicast/unicast optimization in single cell </li>
+</ul>
+<p></font></p>
 <ul>
 <li>
-<p>Multicast/unicast optimization in single cell </p>
+<p>UAV Jamming?</p>
+<ul>
+<li>detect a group of UAVs that try to jam the channel</li>
+<li>act as a group to jam the whole channel</li>
+</ul>
 </li>
 <li>
-<p>predictive gain</p>
+<p>Maximize tput under a given power budget</p>
+<ul>
+<li>Given an average power budget P_avg:</li>
+<li>If we can scale BW for capacity and power trade-off</li>
+<li>User can communicate with NW about scaled BW</li>
+<li>For a slot, NW can be in Idle, or Active</li>
+<li>If Active, NW scheduling ratio can be random variable</li>
+<li>Meanwhile, channel gain and noise (thus SNR) is also random variable</li>
+<li>how to optimize?</li>
+</ul>
 </li>
 </ul>
 <hr />
@@ -344,6 +355,7 @@
 </ul>
 </li>
 </ul>
+<hr />
 <!---
 *****************************************
     Maths - Beautiful Proof Examples
@@ -351,7 +363,7 @@
 --->
 
 <h2 id="maths-beautiful-proof-examples">Maths - Beautiful Proof Examples</h2>
-<ul>
+<ol>
 <li>
 <p><strong>Online Trajectory Optimization Using Inexact Gradient Feedback for Time-Varying Environments</strong></p>
 </li>
@@ -367,7 +379,263 @@
 <li>https://en.wikipedia.org/wiki/Category:Theorems_in_statistics</li>
 </ul>
 </li>
-</ul></div>
+<li>
+<p><strong>Proof of Chebyshey and Law of Large Number</strong></p>
+<ul>
+<li>Link: https://www.dartmouth.edu/~chance/teaching_aids/books_articles/probability_book/Chapter8.pdf</li>
+</ul>
+</li>
+<li>
+<p>**Proof of PGD for convex functio</p>
+</li>
+<li>
+<p><strong>inner product properties</strong></p>
+<ul>
+<li>Link: https://www.math.ust.hk/~mabfchen/Math111/Week13-14.pdf</li>
+<li>https://www-users.cs.umn.edu/~saad/csci5304/FILES/LecN2.pdf</li>
+<li>https://en.wikipedia.org/wiki/Frobenius_inner_product</li>
+</ul>
+</li>
+<li>
+<p><strong>auxiliary variables in stats</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/1902.07954.pdf</li>
+<li>https://www.quora.com/What-is-an-auxiliary-variable-in-statistics</li>
+</ul>
+</li>
+<li>
+<p><strong>Continuity and Proof</strong></p>
+<ul>
+<li>http://page.mi.fu-berlin.de/shagnik/notes/continuity.pdf</li>
+<li>Example paper: https://arxiv.org/pdf/1710.09318.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>MONOTONICITY PRESERVING APPROXIMATION OF MULTIVARIATE SCATTERED DATA</strong></p>
+<ul>
+<li>http://dro.deakin.edu.au/eserv/DU:30003256/beliakov-monotonicity-post-2006.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Augmented Lagrangian Methods</strong></p>
+<ul>
+<li>https://web.stanford.edu/class/msande318/notes/notes09-BCL.pdf</li>
+<li>https://www.mit.edu/~dimitrib/lagr_mult.html</li>
+<li>https://www.mit.edu/~dimitrib/Constrained-Opt.pdf</li>
+<li><font color='red'><strong>now in page 77</strong></font></li>
+</ul>
+</li>
+<li>
+<p><strong>Real Analysis</strong></p>
+<ul>
+<li>https://mathcs.org/analysis/reals/index.html</li>
+</ul>
+</li>
+<li>
+<p><strong>Chain rule of differentiation</strong></p>
+<ul>
+<li>http://faculty.wlc.edu/buelow/calc/nt3-5.html</li>
+</ul>
+</li>
+<li>
+<p><strong>Implicit Function Theorem</strong></p>
+<ul>
+<li>https://www.math.ucla.edu/~archristian/teaching/32a-f16/implicit-function-theorem.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Derivates vs Gradient</strong></p>
+<ul>
+<li>http://homepages.inf.ed.ac.uk/rbf/CVonline/LOCAL_COPIES/BASICMAT/node5.html</li>
+</ul>
+</li>
+<li>
+<p><strong>Real Analysis</strong></p>
+<ul>
+<li>The Principles of Mathematical Analysis</li>
+</ul>
+</li>
+<li>
+<p><strong>Matrix Calculus and Derivative</strong></p>
+<ul>
+<li>https://atmos.washington.edu/~dennis/MatrixCalculus.pdf</li>
+<li>http://www.ee.ic.ac.uk/hp/staff/dmb/matrix/calculus.html</li>
+<li>https://ccrma.stanford.edu/~dattorro/matrixcalc.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Basic Maths Knowledge in a Thesis</strong></p>
+<ul>
+<li>https://hal.archives-ouvertes.fr/tel-01388978/document</li>
+</ul>
+</li>
+<li>
+<p><strong>Fixed Point Mapping</strong></p>
+<ul>
+<li>http://terpconnect.umd.edu/~petersd/666/fixedpoint.pdf</li>
+<li>https://www.math.ucdavis.edu/~hunter/book/ch3.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>MM Optimization</strong></p>
+<ul>
+<li>(Tutorial Book) http://jianwei.ie.cuhk.edu.hk/publication/Book/MonotonicOptimization.pdf</li>
+<li>https://arxiv.org/pdf/1910.07853.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Tangent Cone</strong></p>
+<ul>
+<li>https://lijiancheng0614.github.io/2015/12/01/2015_12_01_Optimization_Methods_Optimality_Conditions/</li>
+<li>http://fatboycw.is-programmer.com/posts/41798.html</li>
+</ul>
+</li>
+</ol>
+<hr />
+<!---
+*****************************************
+    Paper - Reading Notes
+*****************************************
+--->
+
+<h2 id="paper-reading-notes">Paper Reading Notes</h2>
+<ol>
+<li>
+<p><strong>Handover skipping? https://arxiv.org/pdf/2008.10535.pdf</strong></p>
+</li>
+<li>
+<p><strong>Mixed Monotonic Programming for Fast Global Optimization</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/1910.07853.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Multi-UAV Interference Coordination via Joint Trajectory and Power Control</strong></p>
+<ul>
+<li>optimization problem</li>
+<li>solved by optimizing lower bound</li>
+<li>also solved by ADMM?</li>
+<li>also solved by nonlinear optimization</li>
+</ul>
+</li>
+<li>
+<p><strong>PHD thesis for PCA</strong></p>
+<ul>
+<li>https://hal.archives-ouvertes.fr/tel-01388978/document</li>
+</ul>
+</li>
+<li>
+<p><strong>Best Pair Formulation &amp; Accelerated Scheme for Non-convex Principal Component Pursuit</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/1905.10598.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>[TSP] Subspace clustering without knowing the number of clusters: A parameter free approach</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/1909.04406.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>[TSP] Inverse Filtering for Hidden Markov Models with Applications to Counter-Adversarial Autonomous Systems</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/2001.11809.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>[TIT] Nonconvex Rectangular Matrix Completion via Gradient Descent without l2,∞ Regularization</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/1901.06116.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>[T Control] Distributed Interpolation Schemes for Field Estimation by Mobile Sensor Networks</strong></p>
+<ul>
+<li>https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=5229132&amp;casa_token=rgZncmJxPh4AAAAA:WcICWDLw28cZL6KJF6-aTn63g4TyghVWUdmXCNEd2J7GJqwMiRhmQ4TykcOJrz_Zd-DrFFiVKA&amp;tag=1</li>
+</ul>
+</li>
+<li>
+<p><strong>A ROBUST MACHINE LEARNING METHOD FOR CELL-LOAD APPROXIMATION IN WIRELESS NETWORKS</strong></p>
+<ul>
+<li>Very interesting a paper, there are three items learned from this paper:</li>
+<li>how to prove a set is compact</li>
+<li>how to prove a function is uniformly continuous</li>
+<li>how to approximate with min-max from dataset</li>
+</ul>
+</li>
+<li>
+<p><strong>Trajectory Poisson multi-Bernoulli filters</strong></p>
+<ul>
+<li>per my understanding, this paper is trying to estimate the number of alive or total trajectories from distribution PoV.</li>
+<li>It is a paper in stats domain.</li>
+</ul>
+</li>
+<li>
+<p><strong>Decentralized Accelerated Gradient Methods With Increasing Penalty Parameters</strong></p>
+<ul>
+<li>Link: https://arxiv.org/pdf/1810.01053.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Tensor Completion from Regular Sub-Nyquist Samples</strong></p>
+<ul>
+<li>Link: https://arxiv.org/pdf/1903.00435.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Two-Step Codeword Design for Millimeter Wave Massive MIMO Systems with Quantized Phase Shifters</strong></p>
+<ul>
+<li>Link: https://arxiv.org/pdf/2002.06351.pdf</li>
+<li>ideal codebook, discrete phase search, practical beam</li>
+</ul>
+</li>
+<li>
+<p><strong>Convergence of a Multi-Agent Projected Stochastic Gradient Algorithm for Non-Convex Optimization</strong></p>
+<ul>
+<li>link: https://arxiv.org/pdf/1107.2526.pdf</li>
+<li>doubly stochastic weight matrix</li>
+<li>Kronecker product https://en.wikipedia.org/wiki/Kronecker_product</li>
+<li>almost surely convergence: https://www.probabilitycourse.com/chapter7/7_2_7_almost_sure_convergence.php</li>
+<li>http://www.stat.cmu.edu/~larry/=stat705/Lecture4.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>[08/23/2020] NEXT: In-Network Nonconvex Optimization</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/1602.00591.pdf</li>
+<li>classical gradient-consensus algorithms</li>
+</ul>
+</li>
+<li>
+<p><strong>Bayesian Methods for Multiple Change-Point Detection with Reduced Communication</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/2003.11062.pdf</li>
+<li><strong>sigma-algebras</strong>: http://theanalysisofdata.com/probability/E_1.html</li>
+</ul>
+</li>
+<li>
+<p><strong>[TSP] [08/23/2020] Soft Range Information for Network Localization</strong></p>
+<ul>
+<li>Paper from MIT Win's team</li>
+<li>focus is accuracy info/distribution for network localization</li>
+</ul>
+</li>
+<li>
+<p><strong>[TSP] [08/22/2020] Signal-Dependent Performance Analysis of Orthogonal Matching Pursuit for Exact Sparse Recovery</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/2008.05071.pdf</li>
+<li>analyzed the property of Orthogonal Matching Pursuit for a sparse recovery problem</li>
+</ul>
+</li>
+<li>
+<p><strong>[TSP] [08/22/2020] Sparse Array Design via Fractal Geometries</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/2001.01217.pdf</li>
+<li>a nice example about induction proof: Base, Assumption step k, Step k+1</li>
+<li>proof about fraction is not very clear to me</li>
+</ul>
+</li>
+</ol></div>
         </div>
 
         <footer class="col-md-12">
