--- a/wireless/index.html
+++ b/wireless/index.html
@@ -263,6 +263,12 @@
 <li>https://www.itu.int/dms_pub/itu-t/opb/tut/T-TUT-TEST-2019-PDF-E.pdf</li>
 </ul>
 </li>
+<li>
+<p><strong>Illustration for inband/out-of-band blocking, and ACS</strong></p>
+<ul>
+<li>https://cdn.rohde-schwarz.com/pws/dl_downloads/dl_application/application_notes/1ma221/1MA221_0e.pdf</li>
+</ul>
+</li>
 </ul></div>
         </div>
 
