Deployed  with MkDocs version: 1.0.4

--- a/academic-general/index.html
+++ b/academic-general/index.html
@@ -103,14 +103,8 @@
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#academic">Academic</a></li>
             <li><a href="#interesting-projects">Interesting Projects</a></li>
-            <li><a href="#papers-stochastic-geometric">Papers - Stochastic Geometric</a></li>
-            <li><a href="#papers-general">Papers - General</a></li>
-            <li><a href="#papers-robotic-wireless-network">Papers - Robotic Wireless Network</a></li>
             <li><a href="#links">Links</a></li>
             <li><a href="#idea-topics">Idea Topics</a></li>
-            <li><a href="#maths-non-convex-optimization">Maths - Non-Convex Optimization</a></li>
-            <li><a href="#maths-beautiful-proof-examples">Maths - Beautiful Proof Examples</a></li>
-            <li><a href="#paper-reading-notes">Paper Reading Notes</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
@@ -136,149 +130,6 @@
 <ul>
 <li>https://github.com/IIT-Lab/Paper-with-Code-of-Wireless-communication-Based-on-DL</li>
 </ul>
-</li>
-</ul>
-<hr />
-<!---
-*****************************************
-    Papers - Stochastic Geometric 
-*****************************************
---->
-
-<h2 id="papers-stochastic-geometric">Papers - Stochastic Geometric</h2>
-<ol>
-<li>
-<p><font color='red'><strong>Millimeter Wave Outdoor Cellular Networks: Stochastic Geometry Channel Modeling and Performance Analysis</strong></font></p>
-<ul>
-<li>Study Note: </li>
-</ul>
-</li>
-<li>
-<p><strong>Unified Stochastic Geometry Modeling and Analysis of Cellular Networks in LOS/NLOS and Shadowed Fading</strong></p>
-<ul>
-<li>Note: theoretical analysis framework for BER modeling</li>
-</ul>
-</li>
-<li>
-<p><strong>The Intensity Matching Approach: A Tractable Stochastic Geometry Approximation to System-Level Analysis of Cellular Networks</strong></p>
-<ul>
-<li>Note: can use the framework modeling in this paper for a cellular mmW study</li>
-</ul>
-</li>
-<li>
-<p><strong>Analytical Model for Outdoor Millimeter Wave Channels Using Geometry-Based Stochastic Approach</strong></p>
-<ul>
-<li>Note:</li>
-</ul>
-</li>
-<li>
-<p><strong>[TO Read] The impact of mobility model on handover rate in heterogeneous multi-tier wireless networks</strong></p>
-</li>
-<li>
-<p><strong>[TO Read] Recent progress in Sto-Geo in cellular</strong></p>
-<ul>
-<li>https://chiranjibsaha.github.io/files/Saha_C_D_2020.pdf</li>
-</ul>
-</li>
-</ol>
-<hr />
-<!---
-*****************************************
-    Papers - General
-*****************************************
---->
-
-<h2 id="papers-general">Papers - General</h2>
-<ul>
-<li>
-<p><strong>[On-Going] Modeling and Analysis of Cellular Networks Using Stochastic Geometry: A Tutorial</strong></p>
-<ul>
-<li>Reading Note: study is on-going, has not finished. It presents some basic theorems in this topic. </li>
-</ul>
-</li>
-<li>
-<p><strong>https://arxiv.org/pdf/1812.07665.pdf</strong></p>
-<ul>
-<li>Link: https://arxiv.org/pdf/1812.07665.pdf</li>
-</ul>
-</li>
-<li>
-<p>Błaszczyszyn, B. and Keeler, H. P. (2015). <strong>Studying the SINR process of the typical user in Poisson networks by using its factorial moment measures.</strong> IEEE Trans. Inf. Theory 61, 6774 - 6794. </p>
-<ul>
-<li>Reading Note: distribution characterization for SNR, SINR, and STINR</li>
-</ul>
-</li>
-<li>
-<p><strong>FR2 over 52GHz</strong>    </p>
-</li>
-<li>
-<p><strong>Large Scale LoRa Network</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2008.07438.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Age of Information</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2008.07717.pdf</li>
-</ul>
-</li>
-</ul>
-<hr />
-<!---
-*****************************************
-    Papers - Robotic Wireless Network
-*****************************************
---->
-
-<h2 id="papers-robotic-wireless-network">Papers - Robotic Wireless Network</h2>
-<p><strong>ON-GOING</strong></p>
-<ul>
-<li>
-<p><font color='red'><strong>Joint trajectory and communication design for multi-UAV enabled wireless networks</strong></p>
-<ul>
-<li>Note: fundamental flagship paper in this area</font></li>
-</ul>
-</li>
-<li>
-<p>Link: https://web.ece.ucsb.edu/mostofi-lab/overview/CommRobotics.html</p>
-<ul>
-<li>also good nice page template?</li>
-</ul>
-</li>
-<li>
-<p>Paper: https://arxiv.org/pdf/1308.0037.pdf</p>
-</li>
-</ul>
-<p><strong>TO READ</strong>
-* [TO READ] <strong>Online Trajectory Optimization Using Inexact Gradient Feedback for Time-Varying Environments</strong></p>
-<ul>
-<li>
-<p>[To Read] <strong>Connecting flying backhauls of drones to enhance vehicular networks with fixed 5G NR infrastructure</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>Autonomous UAV-aided Mesh Wireless Networks</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>Distributed Intelligence Empowered Data Aggregation and Distribution for Multi-robot Cooperative Communication</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>QoS_Compliant_3D_Deployment_Optimization_Strategy_UAV_BS</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>Intelligent UAV Based Flexible 5G Emergency Networks: Field Trial and System Level Results</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>Deep_QNetwork_Dynamic_Movement_Strategy_UAV_Assisted_Network</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>Distributed Deep Learning-based Task Offloading for UAV-enabled Mobile Edge Computing</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>UAV_Communications_5G_and_Beyond_Recent_Advances_Future_Trends</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>Latency and Reliability Oriented Collaborative Optimization for Multi-UAV Aided Mobile Edge Computing System</strong></p>
 </li>
 </ul>
 <hr />
@@ -343,362 +194,7 @@
 </ul>
 </li>
 </ul>
-<hr />
-<!---
-*****************************************
-    Maths
-*****************************************
---->
-
-<h2 id="maths-non-convex-optimization">Maths - Non-Convex Optimization</h2>
-<ul>
-<li>
-<p><strong>A unified algorithmic framework for block-structured optimization involving big data: With applications in machine learning and signal processing</strong></p>
-<ul>
-<li>This algorithm covers a set of iterative optimization ideas, where only one variable is updated in each iteration while the rest variables keep unchanged.</li>
-</ul>
-</li>
-<li>
-<p><strong>Non-Convex Optimization in Machine Learning</strong></p>
-<ul>
-<li>https://arxiv.org/abs/1712.07897</li>
-<li><font color='red'>nice maths symbols</font></li>
-<li>projected GD method (Chapter II)</li>
-<li>sec 3.3: gPGD</li>
-</ul>
-</li>
-<li>
-<p><strong>Tractable Non-convex Problem with Symmetry</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2007.06753.pdf</li>
-<li>phase, or dictionary transform</li>
-</ul>
-</li>
-</ul>
-<hr />
-<!---
-*****************************************
-    Maths - Beautiful Proof Examples
-*****************************************
---->
-
-<h2 id="maths-beautiful-proof-examples">Maths - Beautiful Proof Examples</h2>
-<ol>
-<li>
-<p><strong>Online Trajectory Optimization Using Inexact Gradient Feedback for Time-Varying Environments</strong></p>
-</li>
-<li>
-<p><strong>Harvard Math Theorems</strong></p>
-<ul>
-<li>http://people.math.harvard.edu/~knill/graphgeometry/papers/fundamental.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Theorem in Stats</strong></p>
-<ul>
-<li>https://en.wikipedia.org/wiki/Category:Theorems_in_statistics</li>
-</ul>
-</li>
-<li>
-<p><strong>Proof of Chebyshey and Law of Large Number</strong></p>
-<ul>
-<li>Link: https://www.dartmouth.edu/~chance/teaching_aids/books_articles/probability_book/Chapter8.pdf</li>
-</ul>
-</li>
-<li>
-<p>**Proof of PGD for convex functio</p>
-</li>
-<li>
-<p><strong>inner product properties</strong></p>
-<ul>
-<li>Link: https://www.math.ust.hk/~mabfchen/Math111/Week13-14.pdf</li>
-<li>https://www-users.cs.umn.edu/~saad/csci5304/FILES/LecN2.pdf</li>
-<li>https://en.wikipedia.org/wiki/Frobenius_inner_product</li>
-</ul>
-</li>
-<li>
-<p><strong>auxiliary variables in stats</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1902.07954.pdf</li>
-<li>https://www.quora.com/What-is-an-auxiliary-variable-in-statistics</li>
-</ul>
-</li>
-<li>
-<p><strong>Continuity and Proof</strong></p>
-<ul>
-<li>http://page.mi.fu-berlin.de/shagnik/notes/continuity.pdf</li>
-<li>Example paper: https://arxiv.org/pdf/1710.09318.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>MONOTONICITY PRESERVING APPROXIMATION OF MULTIVARIATE SCATTERED DATA</strong></p>
-<ul>
-<li>http://dro.deakin.edu.au/eserv/DU:30003256/beliakov-monotonicity-post-2006.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Augmented Lagrangian Methods</strong></p>
-<ul>
-<li>https://web.stanford.edu/class/msande318/notes/notes09-BCL.pdf</li>
-<li>https://www.mit.edu/~dimitrib/lagr_mult.html</li>
-<li>https://www.mit.edu/~dimitrib/Constrained-Opt.pdf</li>
-<li><font color='red'><strong>now in page 77</strong></font></li>
-</ul>
-</li>
-<li>
-<p><strong>Real Analysis</strong></p>
-<ul>
-<li>https://mathcs.org/analysis/reals/index.html</li>
-</ul>
-</li>
-<li>
-<p><strong>Chain rule of differentiation</strong></p>
-<ul>
-<li>http://faculty.wlc.edu/buelow/calc/nt3-5.html</li>
-</ul>
-</li>
-<li>
-<p><strong>Implicit Function Theorem</strong></p>
-<ul>
-<li>https://www.math.ucla.edu/~archristian/teaching/32a-f16/implicit-function-theorem.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Derivates vs Gradient</strong></p>
-<ul>
-<li>http://homepages.inf.ed.ac.uk/rbf/CVonline/LOCAL_COPIES/BASICMAT/node5.html</li>
-</ul>
-</li>
-<li>
-<p><strong>Real Analysis</strong></p>
-<ul>
-<li>The Principles of Mathematical Analysis</li>
-</ul>
-</li>
-<li>
-<p><strong>Matrix Calculus and Derivative</strong></p>
-<ul>
-<li>https://atmos.washington.edu/~dennis/MatrixCalculus.pdf</li>
-<li>http://www.ee.ic.ac.uk/hp/staff/dmb/matrix/calculus.html</li>
-<li>https://ccrma.stanford.edu/~dattorro/matrixcalc.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Basic Maths Knowledge in a Thesis</strong></p>
-<ul>
-<li>https://hal.archives-ouvertes.fr/tel-01388978/document</li>
-</ul>
-</li>
-<li>
-<p><strong>Fixed Point Mapping</strong></p>
-<ul>
-<li>http://terpconnect.umd.edu/~petersd/666/fixedpoint.pdf</li>
-<li>https://www.math.ucdavis.edu/~hunter/book/ch3.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>MM Optimization</strong></p>
-<ul>
-<li><strong>(Tutorial Book) http://jianwei.ie.cuhk.edu.hk/publication/Book/MonotonicOptimization.pdf</strong></li>
-<li>https://arxiv.org/pdf/1910.07853.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Tangent Cone</strong></p>
-<ul>
-<li>https://lijiancheng0614.github.io/2015/12/01/2015_12_01_Optimization_Methods_Optimality_Conditions/</li>
-<li>http://fatboycw.is-programmer.com/posts/41798.html</li>
-</ul>
-</li>
-<li>
-<p><strong>Tensor Decomposition: Complete paper</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1607.01668.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Function Approximation</strong></p>
-<ul>
-<li>GREEDY FUNCTION APPROXIMATION: A GRADIENT BOOSTING MACHINE1</li>
-<li>https://projecteuclid.org/download/pdf_1/euclid.aos/1013203451</li>
-</ul>
-</li>
-</ol>
-<hr />
-<!---
-*****************************************
-    Paper - Reading Notes
-*****************************************
---->
-
-<h2 id="paper-reading-notes">Paper Reading Notes</h2>
-<ol>
-<li>
-<p><strong>On the Adaptivity of Stochastic Gradient-Based Optimization</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1904.04480.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Ensemble Kalman methods for high-dimensional hierarchical dynamic space-time models</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1704.06988.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>GLOBAL OPTIMIZATION WITH POLYNOMIALS AND THE PROBLEM OF MOMENTS</strong></p>
-<ul>
-<li>http://web.mit.edu/~a_a_a/Public/Publications/refs_for_seb_blog/Lasserre.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Joint Design of Comm and Radar</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1711.05220.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Use OFDM signal for target detection: range, velocity, and angle</strong></p>
-<ul>
-<li>https://www.hindawi.com/journals/wcmc/2018/2708416/</li>
-</ul>
-</li>
-<li>
-<p><strong>Handover skipping? https://arxiv.org/pdf/2008.10535.pdf</strong></p>
-</li>
-<li>
-<p><strong>Mixed Monotonic Programming for Fast Global Optimization</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1910.07853.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Multi-UAV Interference Coordination via Joint Trajectory and Power Control</strong></p>
-<ul>
-<li>optimization problem</li>
-<li>solved by optimizing lower bound</li>
-<li>also solved by ADMM?</li>
-<li>also solved by nonlinear optimization</li>
-</ul>
-</li>
-<li>
-<p><strong>PHD thesis for PCA</strong></p>
-<ul>
-<li>https://hal.archives-ouvertes.fr/tel-01388978/document</li>
-</ul>
-</li>
-<li>
-<p><strong>Best Pair Formulation &amp; Accelerated Scheme for Non-convex Principal Component Pursuit</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1905.10598.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>[TSP] Subspace clustering without knowing the number of clusters: A parameter free approach</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1909.04406.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>[TSP] Inverse Filtering for Hidden Markov Models with Applications to Counter-Adversarial Autonomous Systems</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2001.11809.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>[TIT] Nonconvex Rectangular Matrix Completion via Gradient Descent without l2,∞ Regularization</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1901.06116.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>[T Control] Distributed Interpolation Schemes for Field Estimation by Mobile Sensor Networks</strong></p>
-<ul>
-<li>https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=5229132&amp;casa_token=rgZncmJxPh4AAAAA:WcICWDLw28cZL6KJF6-aTn63g4TyghVWUdmXCNEd2J7GJqwMiRhmQ4TykcOJrz_Zd-DrFFiVKA&amp;tag=1</li>
-</ul>
-</li>
-<li>
-<p><strong>A ROBUST MACHINE LEARNING METHOD FOR CELL-LOAD APPROXIMATION IN WIRELESS NETWORKS</strong></p>
-<ul>
-<li>Very interesting a paper, there are three items learned from this paper:</li>
-<li>how to prove a set is compact</li>
-<li>how to prove a function is uniformly continuous</li>
-<li>how to approximate with min-max from dataset</li>
-</ul>
-</li>
-<li>
-<p><strong>Trajectory Poisson multi-Bernoulli filters</strong></p>
-<ul>
-<li>per my understanding, this paper is trying to estimate the number of alive or total trajectories from distribution PoV.</li>
-<li>It is a paper in stats domain.</li>
-</ul>
-</li>
-<li>
-<p><strong>Decentralized Accelerated Gradient Methods With Increasing Penalty Parameters</strong></p>
-<ul>
-<li>Link: https://arxiv.org/pdf/1810.01053.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Tensor Completion from Regular Sub-Nyquist Samples</strong></p>
-<ul>
-<li>Link: https://arxiv.org/pdf/1903.00435.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Two-Step Codeword Design for Millimeter Wave Massive MIMO Systems with Quantized Phase Shifters</strong></p>
-<ul>
-<li>Link: https://arxiv.org/pdf/2002.06351.pdf</li>
-<li>ideal codebook, discrete phase search, practical beam</li>
-</ul>
-</li>
-<li>
-<p><strong>Convergence of a Multi-Agent Projected Stochastic Gradient Algorithm for Non-Convex Optimization</strong></p>
-<ul>
-<li>link: https://arxiv.org/pdf/1107.2526.pdf</li>
-<li>doubly stochastic weight matrix</li>
-<li>Kronecker product https://en.wikipedia.org/wiki/Kronecker_product</li>
-<li>almost surely convergence: https://www.probabilitycourse.com/chapter7/7_2_7_almost_sure_convergence.php</li>
-<li>http://www.stat.cmu.edu/~larry/=stat705/Lecture4.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>[08/23/2020] NEXT: In-Network Nonconvex Optimization</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1602.00591.pdf</li>
-<li>classical gradient-consensus algorithms</li>
-</ul>
-</li>
-<li>
-<p><strong>Bayesian Methods for Multiple Change-Point Detection with Reduced Communication</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2003.11062.pdf</li>
-<li><strong>sigma-algebras</strong>: http://theanalysisofdata.com/probability/E_1.html</li>
-</ul>
-</li>
-<li>
-<p><strong>[TSP] [08/23/2020] Soft Range Information for Network Localization</strong></p>
-<ul>
-<li>Paper from MIT Win's team</li>
-<li>focus is accuracy info/distribution for network localization</li>
-</ul>
-</li>
-<li>
-<p><strong>[TSP] [08/22/2020] Signal-Dependent Performance Analysis of Orthogonal Matching Pursuit for Exact Sparse Recovery</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2008.05071.pdf</li>
-<li>analyzed the property of Orthogonal Matching Pursuit for a sparse recovery problem</li>
-</ul>
-</li>
-<li>
-<p><strong>[TSP] [08/22/2020] Sparse Array Design via Fractal Geometries</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2001.01217.pdf</li>
-<li>a nice example about induction proof: Base, Assumption step k, Step k+1</li>
-<li>proof about fraction is not very clear to me</li>
-</ul>
-</li>
-</ol></div>
+<hr /></div>
         </div>
 
         <footer class="col-md-12">
