--- a/academic-maths/index.html
+++ b/academic-maths/index.html
@@ -102,247 +102,13 @@
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
         <li class="main active"><a href="#academic">Academic</a></li>
-            <li><a href="#interesting-projects">Interesting Projects</a></li>
-            <li><a href="#papers-stochastic-geometric">Papers - Stochastic Geometric</a></li>
-            <li><a href="#papers-general">Papers - General</a></li>
-            <li><a href="#papers-robotic-wireless-network">Papers - Robotic Wireless Network</a></li>
-            <li><a href="#links">Links</a></li>
-            <li><a href="#idea-topics">Idea Topics</a></li>
             <li><a href="#maths-non-convex-optimization">Maths - Non-Convex Optimization</a></li>
             <li><a href="#maths-beautiful-proof-examples">Maths - Beautiful Proof Examples</a></li>
-            <li><a href="#paper-reading-notes">Paper Reading Notes</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
 
 <h1 id="academic">Academic</h1>
-<hr />
-<!---
-*****************************************
-    Project Section 
-*****************************************
---->
-
-<h2 id="interesting-projects">Interesting Projects</h2>
-<ul>
-<li>
-<p><strong>Python script for basic poisson network</strong></p>
-<ul>
-<li>https://hpaulkeeler.com/category/stochastic-geometry/</li>
-</ul>
-</li>
-<li>
-<p><strong>ML for wireless comm</strong></p>
-<ul>
-<li>https://github.com/IIT-Lab/Paper-with-Code-of-Wireless-communication-Based-on-DL</li>
-</ul>
-</li>
-</ul>
-<hr />
-<!---
-*****************************************
-    Papers - Stochastic Geometric 
-*****************************************
---->
-
-<h2 id="papers-stochastic-geometric">Papers - Stochastic Geometric</h2>
-<ol>
-<li>
-<p><font color='red'><strong>Millimeter Wave Outdoor Cellular Networks: Stochastic Geometry Channel Modeling and Performance Analysis</strong></font></p>
-<ul>
-<li>Study Note: </li>
-</ul>
-</li>
-<li>
-<p><strong>Unified Stochastic Geometry Modeling and Analysis of Cellular Networks in LOS/NLOS and Shadowed Fading</strong></p>
-<ul>
-<li>Note: theoretical analysis framework for BER modeling</li>
-</ul>
-</li>
-<li>
-<p><strong>The Intensity Matching Approach: A Tractable Stochastic Geometry Approximation to System-Level Analysis of Cellular Networks</strong></p>
-<ul>
-<li>Note: can use the framework modeling in this paper for a cellular mmW study</li>
-</ul>
-</li>
-<li>
-<p><strong>Analytical Model for Outdoor Millimeter Wave Channels Using Geometry-Based Stochastic Approach</strong></p>
-<ul>
-<li>Note:</li>
-</ul>
-</li>
-<li>
-<p><strong>[TO Read] The impact of mobility model on handover rate in heterogeneous multi-tier wireless networks</strong></p>
-</li>
-<li>
-<p><strong>[TO Read] Recent progress in Sto-Geo in cellular</strong></p>
-<ul>
-<li>https://chiranjibsaha.github.io/files/Saha_C_D_2020.pdf</li>
-</ul>
-</li>
-</ol>
-<hr />
-<!---
-*****************************************
-    Papers - General
-*****************************************
---->
-
-<h2 id="papers-general">Papers - General</h2>
-<ul>
-<li>
-<p><strong>[On-Going] Modeling and Analysis of Cellular Networks Using Stochastic Geometry: A Tutorial</strong></p>
-<ul>
-<li>Reading Note: study is on-going, has not finished. It presents some basic theorems in this topic. </li>
-</ul>
-</li>
-<li>
-<p><strong>https://arxiv.org/pdf/1812.07665.pdf</strong></p>
-<ul>
-<li>Link: https://arxiv.org/pdf/1812.07665.pdf</li>
-</ul>
-</li>
-<li>
-<p>Błaszczyszyn, B. and Keeler, H. P. (2015). <strong>Studying the SINR process of the typical user in Poisson networks by using its factorial moment measures.</strong> IEEE Trans. Inf. Theory 61, 6774 - 6794. </p>
-<ul>
-<li>Reading Note: distribution characterization for SNR, SINR, and STINR</li>
-</ul>
-</li>
-<li>
-<p><strong>FR2 over 52GHz</strong>    </p>
-</li>
-<li>
-<p><strong>Large Scale LoRa Network</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2008.07438.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Age of Information</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2008.07717.pdf</li>
-</ul>
-</li>
-</ul>
-<hr />
-<!---
-*****************************************
-    Papers - Robotic Wireless Network
-*****************************************
---->
-
-<h2 id="papers-robotic-wireless-network">Papers - Robotic Wireless Network</h2>
-<p><strong>ON-GOING</strong></p>
-<ul>
-<li>
-<p><font color='red'><strong>Joint trajectory and communication design for multi-UAV enabled wireless networks</strong></p>
-<ul>
-<li>Note: fundamental flagship paper in this area</font></li>
-</ul>
-</li>
-<li>
-<p>Link: https://web.ece.ucsb.edu/mostofi-lab/overview/CommRobotics.html</p>
-<ul>
-<li>also good nice page template?</li>
-</ul>
-</li>
-<li>
-<p>Paper: https://arxiv.org/pdf/1308.0037.pdf</p>
-</li>
-</ul>
-<p><strong>TO READ</strong>
-* [TO READ] <strong>Online Trajectory Optimization Using Inexact Gradient Feedback for Time-Varying Environments</strong></p>
-<ul>
-<li>
-<p>[To Read] <strong>Connecting flying backhauls of drones to enhance vehicular networks with fixed 5G NR infrastructure</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>Autonomous UAV-aided Mesh Wireless Networks</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>Distributed Intelligence Empowered Data Aggregation and Distribution for Multi-robot Cooperative Communication</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>QoS_Compliant_3D_Deployment_Optimization_Strategy_UAV_BS</strong></p>
-</li>
-<li>
-<p>[To Read] <strong>Intelligent UAV Based Flexible 5G Emergency Networks: Field Trial and System Level Results</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>Deep_QNetwork_Dynamic_Movement_Strategy_UAV_Assisted_Network</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>Distributed Deep Learning-based Task Offloading for UAV-enabled Mobile Edge Computing</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>UAV_Communications_5G_and_Beyond_Recent_Advances_Future_Trends</strong></p>
-</li>
-<li>
-<p>[To Read]<strong>Latency and Reliability Oriented Collaborative Optimization for Multi-UAV Aided Mobile Edge Computing System</strong></p>
-</li>
-</ul>
-<hr />
-<!---
-*****************************************
-    Links
-*****************************************
---->
-
-<h2 id="links">Links</h2>
-<ul>
-<li>
-<p><strong>sto-geo researcher: Blaszczyszyn</strong> </p>
-<ul>
-<li>Link: https://www.di.ens.fr/~blaszczy/</li>
-<li>
-<p><strong>non-convex optimization but solvable/provable</strong></p>
-</li>
-<li>
-<p>https://sunju.org/research/nonconvex/</p>
-</li>
-</ul>
-<hr />
-</li>
-</ul>
-<!---
-*****************************************
-   Ideas
-*****************************************
---->
-
-<h2 id="idea-topics">Idea Topics</h2>
-<p><font color='green'></p>
-<ul>
-<li>Multicast/unicast optimization in single cell </li>
-</ul>
-<p></font></p>
-<ul>
-<li>
-<p>UAV Jamming?</p>
-<ul>
-<li>detect a group of UAVs that try to jam the channel</li>
-<li>act as a group to jam the whole channel</li>
-</ul>
-</li>
-<li>
-<p>Maximize tput under a given power budget</p>
-<ul>
-<li>Given an average power budget P_avg:</li>
-<li>If we can scale BW for capacity and power trade-off</li>
-<li>User can communicate with NW about scaled BW</li>
-<li>For a slot, NW can be in Idle, or Active</li>
-<li>If Active, NW scheduling ratio can be random variable</li>
-<li>Meanwhile, channel gain and noise (thus SNR) is also random variable</li>
-<li>how to optimize?</li>
-</ul>
-</li>
-<li>
-<p><strong>Useful Paper for Counting</strong></p>
-<ul>
-<li>Trajectory Poisson multi-Bernoulli filters</li>
-</ul>
-</li>
-</ul>
 <hr />
 <!---
 *****************************************
@@ -524,181 +290,7 @@
 </ul>
 </li>
 </ol>
-<hr />
-<!---
-*****************************************
-    Paper - Reading Notes
-*****************************************
---->
-
-<h2 id="paper-reading-notes">Paper Reading Notes</h2>
-<ol>
-<li>
-<p><strong>On the Adaptivity of Stochastic Gradient-Based Optimization</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1904.04480.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Ensemble Kalman methods for high-dimensional hierarchical dynamic space-time models</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1704.06988.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>GLOBAL OPTIMIZATION WITH POLYNOMIALS AND THE PROBLEM OF MOMENTS</strong></p>
-<ul>
-<li>http://web.mit.edu/~a_a_a/Public/Publications/refs_for_seb_blog/Lasserre.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Joint Design of Comm and Radar</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1711.05220.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Use OFDM signal for target detection: range, velocity, and angle</strong></p>
-<ul>
-<li>https://www.hindawi.com/journals/wcmc/2018/2708416/</li>
-</ul>
-</li>
-<li>
-<p><strong>Handover skipping? https://arxiv.org/pdf/2008.10535.pdf</strong></p>
-</li>
-<li>
-<p><strong>Mixed Monotonic Programming for Fast Global Optimization</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1910.07853.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Multi-UAV Interference Coordination via Joint Trajectory and Power Control</strong></p>
-<ul>
-<li>optimization problem</li>
-<li>solved by optimizing lower bound</li>
-<li>also solved by ADMM?</li>
-<li>also solved by nonlinear optimization</li>
-</ul>
-</li>
-<li>
-<p><strong>PHD thesis for PCA</strong></p>
-<ul>
-<li>https://hal.archives-ouvertes.fr/tel-01388978/document</li>
-</ul>
-</li>
-<li>
-<p><strong>Best Pair Formulation &amp; Accelerated Scheme for Non-convex Principal Component Pursuit</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1905.10598.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>[TSP] Subspace clustering without knowing the number of clusters: A parameter free approach</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1909.04406.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>[TSP] Inverse Filtering for Hidden Markov Models with Applications to Counter-Adversarial Autonomous Systems</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2001.11809.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>[TIT] Nonconvex Rectangular Matrix Completion via Gradient Descent without l2,∞ Regularization</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1901.06116.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>[T Control] Distributed Interpolation Schemes for Field Estimation by Mobile Sensor Networks</strong></p>
-<ul>
-<li>https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=5229132&amp;casa_token=rgZncmJxPh4AAAAA:WcICWDLw28cZL6KJF6-aTn63g4TyghVWUdmXCNEd2J7GJqwMiRhmQ4TykcOJrz_Zd-DrFFiVKA&amp;tag=1</li>
-</ul>
-</li>
-<li>
-<p><strong>A ROBUST MACHINE LEARNING METHOD FOR CELL-LOAD APPROXIMATION IN WIRELESS NETWORKS</strong></p>
-<ul>
-<li>Very interesting a paper, there are three items learned from this paper:</li>
-<li>how to prove a set is compact</li>
-<li>how to prove a function is uniformly continuous</li>
-<li>how to approximate with min-max from dataset</li>
-</ul>
-</li>
-<li>
-<p><strong>Trajectory Poisson multi-Bernoulli filters</strong></p>
-<ul>
-<li>per my understanding, this paper is trying to estimate the number of alive or total trajectories from distribution PoV.</li>
-<li>It is a paper in stats domain.</li>
-</ul>
-</li>
-<li>
-<p><strong>Decentralized Accelerated Gradient Methods With Increasing Penalty Parameters</strong></p>
-<ul>
-<li>Link: https://arxiv.org/pdf/1810.01053.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Tensor Completion from Regular Sub-Nyquist Samples</strong></p>
-<ul>
-<li>Link: https://arxiv.org/pdf/1903.00435.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>Two-Step Codeword Design for Millimeter Wave Massive MIMO Systems with Quantized Phase Shifters</strong></p>
-<ul>
-<li>Link: https://arxiv.org/pdf/2002.06351.pdf</li>
-<li>ideal codebook, discrete phase search, practical beam</li>
-</ul>
-</li>
-<li>
-<p><strong>Convergence of a Multi-Agent Projected Stochastic Gradient Algorithm for Non-Convex Optimization</strong></p>
-<ul>
-<li>link: https://arxiv.org/pdf/1107.2526.pdf</li>
-<li>doubly stochastic weight matrix</li>
-<li>Kronecker product https://en.wikipedia.org/wiki/Kronecker_product</li>
-<li>almost surely convergence: https://www.probabilitycourse.com/chapter7/7_2_7_almost_sure_convergence.php</li>
-<li>http://www.stat.cmu.edu/~larry/=stat705/Lecture4.pdf</li>
-</ul>
-</li>
-<li>
-<p><strong>[08/23/2020] NEXT: In-Network Nonconvex Optimization</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/1602.00591.pdf</li>
-<li>classical gradient-consensus algorithms</li>
-</ul>
-</li>
-<li>
-<p><strong>Bayesian Methods for Multiple Change-Point Detection with Reduced Communication</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2003.11062.pdf</li>
-<li><strong>sigma-algebras</strong>: http://theanalysisofdata.com/probability/E_1.html</li>
-</ul>
-</li>
-<li>
-<p><strong>[TSP] [08/23/2020] Soft Range Information for Network Localization</strong></p>
-<ul>
-<li>Paper from MIT Win's team</li>
-<li>focus is accuracy info/distribution for network localization</li>
-</ul>
-</li>
-<li>
-<p><strong>[TSP] [08/22/2020] Signal-Dependent Performance Analysis of Orthogonal Matching Pursuit for Exact Sparse Recovery</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2008.05071.pdf</li>
-<li>analyzed the property of Orthogonal Matching Pursuit for a sparse recovery problem</li>
-</ul>
-</li>
-<li>
-<p><strong>[TSP] [08/22/2020] Sparse Array Design via Fractal Geometries</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2001.01217.pdf</li>
-<li>a nice example about induction proof: Base, Assumption step k, Step k+1</li>
-<li>proof about fraction is not very clear to me</li>
-</ul>
-</li>
-</ol></div>
+<hr /></div>
         </div>
 
         <footer class="col-md-12">
