Deployed  with MkDocs version: 1.1.2

--- a/SDR/index.html
+++ b/SDR/index.html
@@ -127,7 +127,7 @@
 <hr />
 <h2 id="objective">Objective</h2>
 <ul>
-<li>emulation system with 1-2 users</li>
+<li>emulation system (1-2 users)</li>
 <li>real-time protocol/MAC/PHY system</li>
 <li>link-level PHY sim</li>
 </ul>
