--- a/academic-general/index.html
+++ b/academic-general/index.html
@@ -141,8 +141,11 @@
 <li>https://github.com/IIT-Lab/Paper-with-Code-of-Wireless-communication-Based-on-DL</li>
 </ul>
 </li>
-</ul>
+<li>
+<p><strong>UAV, Robotic Network, Sto-Geometry</strong></p>
 <hr />
+</li>
+</ul>
 <!---
 *****************************************
     Links
@@ -162,9 +165,15 @@
 <p>https://sunju.org/research/nonconvex/</p>
 </li>
 </ul>
-<hr />
+</li>
+<li>
+<p><strong>Math Notations</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/1904.10307.pdf</li>
+</ul>
 </li>
 </ul>
+<hr />
 <!---
 *****************************************
    Ideas
@@ -172,12 +181,27 @@
 --->
 
 <h2 id="idea-topics">Idea Topics</h2>
-<p><font color='green'></p>
+<ol>
+<li>
+<p><strong>[Optimization] Approximation &amp; function optimization</strong></p>
 <ul>
-<li>Multicast/unicast optimization in single cell </li>
+<li>Learning Nonlinear Mixtures: Identifiability and Algorithm</li>
 </ul>
-<p></font></p>
+</li>
+<li>
+<p><strong>[Signal Processing] multi-source multi-target tracking</strong></p>
 <ul>
+<li>Statistical Multi-source Multi-target Information Fusion</li>
+<li>Trajectory Poisson multi-Bernoulli filters</li>
+<li>Paper: The Gaussian Mixture Prob Hypothesis Density Filter: gmphd github</li>
+</ul>
+</li>
+</ol>
+<p><strong>Backup</strong></p>
+<ol>
+<li>
+<p>Multicast/unicast optimization in single cell</p>
+</li>
 <li>
 <p>UAV Jamming?</p>
 <ul>
@@ -197,13 +221,7 @@
 <li>how to optimize?</li>
 </ul>
 </li>
-<li>
-<p><strong>Useful Paper for Counting</strong></p>
-<ul>
-<li>Trajectory Poisson multi-Bernoulli filters</li>
-</ul>
-</li>
-</ul>
+</ol>
 <hr /></div>
             </div>
         </div>
