--- a/academic-papers/index.html
+++ b/academic-papers/index.html
@@ -170,7 +170,7 @@
 <hr />
 <!---
 *****************************************
-    Papers - General
+    Papers - TO-READ
 *****************************************
 --->
 
@@ -186,6 +186,12 @@
 <p><strong>https://arxiv.org/pdf/1812.07665.pdf</strong></p>
 <ul>
 <li>Link: https://arxiv.org/pdf/1812.07665.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Universal Best Arm Identification</strong></p>
+<ul>
+<li>Song Shen's paper</li>
 </ul>
 </li>
 <li>
@@ -276,6 +282,28 @@
 
 <h2 id="paper-reading-notes">Paper Reading Notes</h2>
 <ol>
+<li>
+<p><strong>Optimal Policies for Observing Time Series and Related Restless Bandit Problems</strong></p>
+</li>
+<li>
+<p><strong>Solving a perturbed amplitude-based model for phase retrieval</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/1904.10307.pdf</li>
+<li>Proof requires a lot of maths</li>
+</ul>
+</li>
+<li>
+<p><strong>Best Arm Identification for Contaminated Bandits</strong></p>
+<ul>
+<li>https://jmlr.csail.mit.edu/papers/volume20/18-395/18-395.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>Action-Manipulation Attacks Against Stochastic Bandits: Attacks and Defense</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/2002.08000.pdf</li>
+</ul>
+</li>
 <li>
 <p><strong>On the Adaptivity of Stochastic Gradient-Based Optimization</strong></p>
 <ul>
@@ -439,6 +467,15 @@
 <li>https://arxiv.org/pdf/2001.01217.pdf</li>
 <li>a nice example about induction proof: Base, Assumption step k, Step k+1</li>
 <li>proof about fraction is not very clear to me</li>
+</ul>
+</li>
+<li>
+<p><strong>Linear Multiple Low-Rank Kernel Based Stationary Gaussian Processes Regression for Time Series</strong></p>
+</li>
+<li>
+<p><strong>predicting wireless data pattern</strong></p>
+<ul>
+<li>https://gitxuy.github.io/files/GlobeCom17_GP.pdf</li>
 </ul>
 </li>
 </ol></div>
