--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
 <h2 id="work">Work</h2>
 <ul>
 <li>Wireless System Design (4G/5G/Wifi)</li>
-<li>Experience on wireless FW and SW development</li>
+<li>Wireless FW and SW development</li>
 </ul>
 <hr />
 <h2 id="interests">Interests</h2>
 <ul>
-<li>wireless communication and network</li>
+<li>wireless communication &amp; network</li>
 <li>optimization, statistics</li>
 <li>software-defined-radio</li>
 </ul>
@@ -150,9 +150,6 @@
 <ol>
 <li>
 <p><strong>[Granted]</strong> US9338668B2: Gain control for intra-band carrier aggregation</p>
-<ul>
-<li>Mariam Motamed, Wesley A. Sampson, Alexei Yurievitch Gorokhov, <strong>Pengkai Zhao</strong> </li>
-</ul>
 </li>
 <li>
 <p>[Granted] Soft-windowing channel estimation</p>
@@ -183,22 +180,14 @@
 <li>
 <p><strong>LTE/NR Spec</strong></p>
 <ul>
-<li>38.101-4: page 40</li>
+<li>TBD</li>
 </ul>
 </li>
 <li>
 <p><strong>3GPP Doc</strong></p>
 <ul>
-<li>SRS R17 is done</li>
-<li>RAN1 is roughly/quickly reviewed</li>
-<li>RAN2 is on-going</li>
+<li>RAN2</li>
 <li>Multicast?</li>
-</ul>
-</li>
-<li>
-<p><strong>Papers</strong></p>
-<ul>
-<li>15 paper logs</li>
 </ul>
 </li>
 <li>
@@ -291,5 +280,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-09-24 17:23:47.700812+00:00
+Build Date UTC : 2020-09-25 05:56:32.067217+00:00
 -->
