--- a/academic-maths/index.html
+++ b/academic-maths/index.html
@@ -100,11 +100,11 @@
             
             <li class="nav-item" data-level="1"><a href="#academic" class="nav-link">Academic</a>
               <ul class="nav flex-column">
-            <li class="nav-item" data-level="2"><a href="#maths-non-convex-optimization" class="nav-link">Maths - Non-Convex Optimization</a>
+            <li class="nav-item" data-level="2"><a href="#maths-proof-examples" class="nav-link">Maths - Proof Examples</a>
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#maths-beautiful-proof-examples" class="nav-link">Maths - Beautiful Proof Examples</a>
+            <li class="nav-item" data-level="2"><a href="#maths-non-convex-optimization" class="nav-link">Maths - Non-Convex Optimization</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -116,46 +116,13 @@
                     <div class="col-md-9" role="main">
 
 <h1 id="academic">Academic</h1>
-<hr />
-<!---
-*****************************************
-    Maths
-*****************************************
---->
-
-<h2 id="maths-non-convex-optimization">Maths - Non-Convex Optimization</h2>
-<ul>
-<li>
-<p><strong>A unified algorithmic framework for block-structured optimization involving big data: With applications in machine learning and signal processing</strong></p>
-<ul>
-<li>This algorithm covers a set of iterative optimization ideas, where only one variable is updated in each iteration while the rest variables keep unchanged.</li>
-</ul>
-</li>
-<li>
-<p><strong>Non-Convex Optimization in Machine Learning</strong></p>
-<ul>
-<li>https://arxiv.org/abs/1712.07897</li>
-<li><font color='red'>nice maths symbols</font></li>
-<li>projected GD method (Chapter II)</li>
-<li>sec 3.3: gPGD</li>
-</ul>
-</li>
-<li>
-<p><strong>Tractable Non-convex Problem with Symmetry</strong></p>
-<ul>
-<li>https://arxiv.org/pdf/2007.06753.pdf</li>
-<li>phase, or dictionary transform</li>
-</ul>
-</li>
-</ul>
-<hr />
 <!---
 *****************************************
     Maths - Beautiful Proof Examples
 *****************************************
 --->
 
-<h2 id="maths-beautiful-proof-examples">Maths - Beautiful Proof Examples</h2>
+<h2 id="maths-proof-examples">Maths - Proof Examples</h2>
 <ol>
 <li>
 <p><strong>Online Trajectory Optimization Using Inexact Gradient Feedback for Time-Varying Environments</strong></p>
@@ -179,7 +146,7 @@
 </ul>
 </li>
 <li>
-<p>**Proof of PGD for convex functio</p>
+<p><strong>Proof of PGD for convex function</strong></p>
 </li>
 <li>
 <p><strong>inner product properties</strong></p>
@@ -296,7 +263,50 @@
 <li>https://projecteuclid.org/download/pdf_1/euclid.aos/1013203451</li>
 </ul>
 </li>
+<li>
+<p><strong>Wirtinger derivatives for Complex Variables</strong> </p>
+<ul>
+<li>https://en.wikipedia.org/wiki/Wirtinger_derivatives</li>
+<li>https://arxiv.org/pdf/1005.5170.pdf</li>
+<li>http://dsp.ucsd.edu/~kreutz/PEI-05%20Support%20Files/Lecture%20Supplement%203%20on%20the%20Complex%20Derivative%20v1.3c%20F05%20.pdf</li>
+</ul>
+</li>
+<li>
+<p><strong>N. I. Achieser, Theory of Approximation. Dover Publications, Inc., New York, 1992.</strong></p>
+</li>
 </ol>
+<hr />
+<!---
+*****************************************
+    Maths
+*****************************************
+--->
+
+<h2 id="maths-non-convex-optimization">Maths - Non-Convex Optimization</h2>
+<ul>
+<li>
+<p><strong>A unified algorithmic framework for block-structured optimization involving big data: With applications in machine learning and signal processing</strong></p>
+<ul>
+<li>This algorithm covers a set of iterative optimization ideas, where only one variable is updated in each iteration while the rest variables keep unchanged.</li>
+</ul>
+</li>
+<li>
+<p><strong>Non-Convex Optimization in Machine Learning</strong></p>
+<ul>
+<li>https://arxiv.org/abs/1712.07897</li>
+<li><font color='red'>nice maths symbols</font></li>
+<li>projected GD method (Chapter II)</li>
+<li>sec 3.3: gPGD</li>
+</ul>
+</li>
+<li>
+<p><strong>Tractable Non-convex Problem with Symmetry</strong></p>
+<ul>
+<li>https://arxiv.org/pdf/2007.06753.pdf</li>
+<li>phase, or dictionary transform</li>
+</ul>
+</li>
+</ul>
 <hr /></div>
             </div>
         </div>
